# mumble

./: .gitignore  .gitmodules  AUTHORS  INSTALL  compiler.pri  main.pro  out.c
docs/: MurmurLocking.md
installer/: Files.wxs  Product.wxs  Settings.wxi
overlay/: D11StateBlock.cpp  D11StateBlock.h  d3d10.cpp  d3d11.cpp  d3d9.cpp  dxgi.cpp  exclude.cpp  exclude.h  excludecheck.cpp  excludecheck.h  lib.cpp  lib.h  overlay-shared.pro  overlay_launcherfilter.h  settings.cpp  settings.h  util.h
overlay/overlay_exe/: overlay_exe.cpp
plugins/: mumble_plugin.h  mumble_plugin_linux.h  mumble_plugin_win32_ptr_type.h  null_plugin.cpp  plugins.pro
plugins/aoc/: aoc.cpp  aoc.pro
plugins/arma2/: arma2.cpp  arma2.pro
plugins/bf1942/: bf1942.cpp  bf1942.pro
plugins/bf2/: bf2.pro
plugins/bf2142/: bf2142.pro
plugins/bf3/: bf3.cpp  bf3.pro
plugins/bf4/: bf4.cpp  bf4.pro
plugins/bf4_x86/: bf4_x86.pro
plugins/bfbc2/: bfbc2.pro
plugins/bfheroes/: bfheroes.pro
plugins/blacklight/: blacklight.pro
plugins/borderlands/: borderlands.pro
plugins/borderlands2/: borderlands2.cpp  borderlands2.pro
plugins/breach/: breach.pro
plugins/cod2/: cod2.pro
plugins/cod4/: cod4.pro
plugins/cod5/: cod5.pro
plugins/codmw2/: codmw2.pro
plugins/codmw2so/: codmw2so.pro
plugins/cs/: cs.pro
plugins/css/: css.pro
plugins/dods/: dods.pro
plugins/dys/: dys.cpp  dys.pro
plugins/etqw/: etqw.cpp  etqw.pro
plugins/gmod/: gmod.cpp  gmod.pro
plugins/gtaiv/: gtaiv.pro
plugins/gtav/: gtav.pro
plugins/gw/: gw.cpp  gw.pro
plugins/hl2dm/: hl2dm.pro
plugins/insurgency/: insurgency.cpp  insurgency.pro
plugins/jc2/: jc2.pro
plugins/l4d/: l4d.cpp  l4d.pro
plugins/lol/: lol.pro
plugins/lotro/: lotro.pro
plugins/manual/: manual.cpp
plugins/ql/: ql.pro
plugins/rl/: rl.pro
plugins/sr/: sr.pro
plugins/sto/: sto.cpp  sto.pro
plugins/tf2/: tf2.pro
plugins/ut2004/: ut2004.cpp  ut2004.pro
plugins/ut3/: ut3.cpp  ut3.pro
plugins/wow/: wow.cpp  (+1 more)
scripts/: generate-AUTHORS.py  generate-dhparams.py  mklic.pl
src/: Channel.h  Connection.cpp  HostAddress.cpp  HostAddress.h  Net.cpp  Net.h  OSInfo.cpp  Qt4Compat.h  SSLCipherInfo.cpp  SSLCipherInfo.h  SSLCipherInfoTable.h  SSLDHParams.cpp  ServerResolverRecord.h  ServerResolver_nosrv.cpp  ServerResolver_qt5.cpp  SignalCurry.h  mumble.pri
src/murmur/: BonjourServer.cpp  BonjourServer.h  CMakeLists.txt  Cert.cpp  DBus.cpp  Messages.cpp  Meta.cpp  Meta.h  Murmur.ice  MurmurGRPCImpl.cpp  MurmurI.h  MurmurIce.cpp  MurmurIceWrapper.cpp  PBKDF2.cpp  PBKDF2.h  RPC.cpp  Register.cpp  Server.cpp  Server.h  ServerDB.cpp  ServerUser.h  UnixMurmur.cpp  murmur.pro
(+77 files in other folders)
